<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irprogram.ebook.settings"
    android:background="@drawable/poste"

    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_above="@+id/btnBack">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_light_settings"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgScreenState"
                    android:padding="10dp"
                    android:onClick="onImgScreenStateClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="light state"
                    android:id="@+id/txtScreenState"
                    android:textSize="30dp"
                    android:padding="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/font_size_settings"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgFontSizeUp"
                    android:padding="10dp"
                    android:onClick="onImgFontSizeUpClick"
                    android:src="@drawable/zoom_in" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgFontSizeDown"
                    android:onClick="onImgFontSizeDownClick"
                    android:padding="10dp"
                    android:src="@drawable/zoom_out" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="font size"
                    android:id="@+id/txtFontSize"
                    android:textSize="30dp"
                    android:padding="30dp" />
            </LinearLayout>

            <TextView
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_settings"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp" />

            <LinearLayout
                android:visibility="invisible"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgSoundState"
                    android:padding="10dp"
                    android:onClick="onImgSoundStateClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sound state"
                    android:id="@+id/txtSoundState"
                    android:textSize="30dp"
                    android:padding="30dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:id="@+id/btnBack"
        android:onClick="onBtnBackClick"
        android:textSize="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
